// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ViewHeader /> > should render renders children 1`] = `
<StyledViewHeader>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      test-child
    </title>
  </HelmetWrapper>
  <div>
    Hello world
  </div>
</StyledViewHeader>
`;

exports[`<ViewHeader /> > should render with count 1`] = `
<StyledViewHeader>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Foo
    </title>
  </HelmetWrapper>
</StyledViewHeader>
`;

exports[`<ViewHeader /> > should render with title 1`] = `
<StyledViewHeader>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Foo
    </title>
  </HelmetWrapper>
</StyledViewHeader>
`;
